--- a/src/_theme/geoscript/layout.html
+++ b/src/_theme/geoscript/layout.html
@@ -78,6 +78,7 @@
             <h1 id="logo"><a href="{{ pathto('index') }}">GeoScript</a></h1>
             <ul id="top-nav">
                 <li class="first"><a href="{{ pathto('learning/index') }}">Learning</a></li>
+                <li class="first"><a href="{{ pathto('examples/index') }}">Examples</a></li>
                 <li><a href="{{ pathto('js/index') }}">JavaScript</a></li>
                 <li><a href="{{ pathto('py/index') }}">Python</a></li>
             </ul>
