Pull Scala docs in and update front page with example and link.

--- a/src/_theme/geoscript/layout.html
+++ b/src/_theme/geoscript/layout.html
@@ -81,6 +81,7 @@
                 <li class="first"><a href="{{ pathto('examples/index') }}">Examples</a></li>
                 <li><a href="{{ pathto('js/index') }}">JavaScript</a></li>
                 <li><a href="{{ pathto('py/index') }}">Python</a></li>
+                <li><a href="{{ pathto('scala/index') }}">Scala</a></li>
             </ul>
             {%- if pagename != "search" %}
             <div id="searchbox">
@@ -98,6 +99,7 @@
                 <div class="fg-buttonset fg-buttonset-single">
                     <button id="chooser-js" class="fg-button ui-state-default ui-priority-primary ui-corner-left">JavaScript</button>
                     <button id="chooser-py" class="fg-button ui-state-default ui-priority-primary ui-corner-right">Python</button>
+                    <button id="chooser-scala" class="fg-button ui-state-default ui-priority-primary ui-corner-right">Scala</button>
                 </div>
             </div>
             {% endif %}
