--- a/src/_theme/geoscript-js/layout.html
+++ b/src/_theme/geoscript-js/layout.html
@@ -34,7 +34,7 @@
             <h1 id="logo"><a href="{{ pathto('index')|replace('index.html', '') }}..">GeoScript</a></h1>
             <ul id="top-nav">
                 <li class="first"><a href="{{ pathto('index') }}">JavaScript</a></li>
-                <li><a href="{{ pathto('quickstart/index') }}">Quick Start</a></li>
+                <li><a href="{{ pathto('quickstart') }}">Quick Start</a></li>
                 <li><a href="{{ pathto('api/index') }}">API Reference</a></li>
             </ul>
             {%- if pagename != "search" %}
