--- a/src/_theme/geoscript-js/layout.html
+++ b/src/_theme/geoscript-js/layout.html
@@ -37,7 +37,7 @@
 {% block header %}
     <div class="header">
         <div class="wrap">
-            <h1 id="logo"><a href="{{ pathto('index')|replace('index.html', '') }}..">GeoScript</a></h1>
+            <h1 id="logo"><a href="{{ pathto('index')|replace('index.html', '')|replace('#', '') }}..">GeoScript</a></h1>
             <ul id="top-nav">
                 <li class="first"><a href="{{ pathto('index') }}">JavaScript</a></li>
                 <li><a href="{{ pathto('quickstart') }}">Quick Start</a></li>
