some site theming, refactored implementation themes into a common theme

--- a/src/_theme/geoscript-common/layout.html
+++ b/src/_theme/geoscript-common/layout.html
@@ -1,5 +1,4 @@
 {% extends "sphinxdoc/layout.html" %}
-{% set title = 'GeoScript' %}
 {%- macro customrelbar(showrel=True) %}
     <div class="related">
       <h3>{{ _('Navigation') }}</h3>
@@ -22,51 +21,76 @@
       </ul>
     </div>
 {%- endmacro %}
+{%- macro download() %}
+   <div class="download">
+     <h1>Download</h1>
+     <p>
+        <a href="download.html">Version {{ version }}</a>
+     </p>
+   </div>
+{%- endmacro %}
 {%- macro index_sidebar() %}
     <div class="sphinxsidebar">
         <div class="sphinxsidebarwrapper">
-          <a href="http://geoscriptblog.blogspot.com/feeds/posts/default" class="news">GeoScript News</a>
-          <script src="http://landmark-project.com/feed2js/feed2js.php?src=http%3A%2F%2Fgeoscriptblog.blogspot.com%2Ffeeds%2Fposts%2Fdefault%3Falt%3Drss&num=3&desc=75"></script>
-          <a href="{{blog_url}}">Read more...</a>
-        </div>
+           {{ download() }}
+           
+           <h2>Activity</h2>
+           <h4>geoscript.{{ impl_short }} commits</h4>
+           <div id="{{impl_short}}commits" class="commits"></div>
+           <a href="http://github.com/{{impl_repo}}/commits/master/">see all ...</a>
+           <div id="gitcommits">
+             <ul>
+                 <li jugl:repeat="commit commits.slice(0, 3)">
+                     <a jugl:attributes="href commit.url"
+                        jugl:content="commit.message">
+                             commit message here
+                     </a><br />
+                     <span class="mini">
+                         [by
+                         <a jugl:attributes="href 'http://github.com/' + commit.author.name"
+                            jugl:content="commit.author.name">
+                              commit author here
+                         </a>
+                          on
+                          <span jugl:replace="commit.authored_date.substring(0, 10)">
+                              commit date here
+                          </span>
+                          ]
+                     </span>
+                  </li>
+              </ul>
+           </div>
     </div>
-{%- endmacro %}
-{%- macro code_chooser() %}
-            <div id="code-chooser">
-                <h3>Language for Examples</h3>
-                <div class="fg-buttonset fg-buttonset-single">
-                    <button id="chooser-js" class="fg-button ui-state-default ui-priority-primary ui-corner-left">JavaScript</button>
-                    <button id="chooser-py" class="fg-button ui-state-default ui-priority-primary ui-corner-right">Python</button>
-                    <button id="chooser-scala" class="fg-button ui-state-default ui-priority-primary ui-corner-right">Scala</button>
-                    <button id="chooser-groovy" class="fg-button ui-state-default ui-priority-primary ui-corner-right">Groovy</button>
-                </div>
-            </div>
+  </div>
 {%- endmacro %}
 
 {% block extrahead %}
     <script src="{{ pathto('_static/site.js', 1) }}"></script>
     <script src="{{ pathto('_static/jquery.cookie.js', 1) }}"></script>
-    <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/themes/smoothness/jquery-ui.css" />
-    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js"></script>
+    {%- if impl_short %}
+    <script>site.setLanguage('{{impl_short}}')</script>
+    {%- endif %}
     {% if pagename == "index" %}
     <script src="{{ pathto('_static/jugl.js', 1) }}"></script>
-    <script>$(site.prepIndex);</script>
-    {% else %}
-    <script>$(site.prepPage);</script>
+    <script>$(site.prepCommits('{{impl_short}}', '{{impl_repo}}'));</script>
     {% endif %}
 {% endblock %}
 
 {% block header %}
     <div class="header">
         <div class="wrap">
-            <h1 id="logo"><a href="{{ pathto('index') }}">GeoScript</a></h1>
+            <h1 id="logo" class="logo-{{ impl_short }}"><a href="{{ pathto('index')|replace('index.html', '')|replace('#', '') }}..">GeoScript</a></h1>
             <ul id="top-nav">
-                <li class="first"><a href="{{ pathto('learning/index') }}">Learning</a></li>
-                <li class="first"><a href="{{ pathto('examples/index') }}">Examples</a></li>
-                <li><a href="{{ pathto('js/index') }}">JavaScript</a></li>
-                <li><a href="{{ pathto('py/index') }}">Python</a></li>
-                <li><a href="{{ pathto('scala/index') }}">Scala</a></li>
-                <li><a href="{{ pathto('groovy/index') }}">Groovy</a></li>
+                {%- if impl_long %}
+                <li class="first"><a href="{{ pathto('index') }}">{{ impl_long }}</a></li>
+                {%- endif %}
+                <li><a href="{{ pathto('quickstart') }}">Quick Start</a></li>
+                <li><a href="{{ pathto('api/index') }}">API</a></li>
+                {%- for impl in [('js', 'JavaScript'), ('py', 'Python'), ('scala', 'Scala'), ('groovy', 'Groovy')] %}
+                {%- if impl[0] != impl_short %}
+                <li><a href="{{ pathto('../' + impl[0] + '/index') }}">{{impl[1]}}</a></li>
+                {%- endif %}
+                {%- endfor %}
             </ul>
             {%- if pagename != "search" %}
             <div id="searchbox">
@@ -78,17 +102,6 @@
                 </form>
             </div>
             {%- endif %}
-            {%- if pagename != 'index' %}
-            <div id="code-chooser">
-                <h3>Language for Examples</h3>
-                <div class="fg-buttonset fg-buttonset-single">
-                    <button id="chooser-js" class="fg-button ui-state-default ui-priority-primary ui-corner-left">JavaScript</button>
-                    <button id="chooser-py" class="fg-button ui-state-default ui-priority-primary ui-corner-right">Python</button>
-                    <button id="chooser-scala" class="fg-button ui-state-default ui-priority-primary ui-corner-right">Scala</button>
-                    <button id="chooser-groovy" class="fg-button ui-state-default ui-priority-primary ui-corner-right">Groovy</button>
-                </div>
-            </div>
-            {% endif %}
         </div>
     </div>
 {% endblock %}
@@ -97,18 +110,12 @@
 {% endblock %}
 
 {% block sidebarsearch %}{% endblock %}
-{% block sidebarlogo %}
-  {% if pagename.find('learning') != -1 or pagename.find('examples') != -1 %}
-    {{ code_chooser() }}
-  {% endif %}
-{% endblock %}
 
 {%- block sidebar1 %}
     {%- if pagename == 'index' %}{{ index_sidebar() }}{% else %}{{ super() }}{% endif %}
 {% endblock %}
 
-{%- block sidebar2 %}
-{% endblock %}
+{%- block sidebar2 %}{% endblock %}
 
 {%- block relbar2 %}
     {%- if pagename != 'index' %}{{ customrelbar(True) }}{% endif %}
