--- a/src/_theme/geoscript-scala/layout.html
+++ b/src/_theme/geoscript-scala/layout.html
@@ -1,72 +1,4 @@
-{% extends "sphinxdoc/layout.html" %}
-{%- macro customrelbar(showrel=True) %}
-    <div class="related">
-      <h3>{{ _('Navigation') }}</h3>
-      <ul>
-        {%- if showrel %}
-            {%- for rellink in rellinks %}
-            <li class="right" {% if loop.first %}style="margin-right: 10px"{% endif %}>
-              <a href="{{ pathto(rellink[0]) }}" title="{{ rellink[1]|striptags }}"
-                 {{ accesskey(rellink[2]) }}>{{ rellink[3] }}</a>
-              {%- if not loop.first %}{{ reldelim2 }}{% endif %}</li>
-            {%- endfor %}
-        {%- endif %}
-        {%- block rootrellink %}
-        <li><a href="{{ pathto(master_doc) }}">{{ shorttitle|e }}</a>{{ reldelim1 }}</li>
-        {%- endblock %}
-        {%- for parent in parents %}
-            <li><a href="{{ parent.link|e }}" {% if loop.last %}{{ accesskey("U") }}{% endif %}>{{ parent.title }}</a>{{ reldelim1 }}</li>
-        {%- endfor %}
-        <li><a href="#">{{ title }}</a></li>
-      </ul>
-    </div>
-{%- endmacro %}
-{%- macro index_sidebar() %}
-    <div class="sphinxsidebar">
-        <div class="sphinxsidebarwrapper">
-        </div>
-    </div>
-{%- endmacro %}
-
-{% block extrahead %}
-    <script src="{{ pathto('_static/site.js', 1) }}"></script>
-    <script src="{{ pathto('_static/jquery.cookie.js', 1) }}"></script>
-    <script>site.setLanguage("scala")</script>
-{% endblock %}
-
-{% block header %}
-    <div class="header">
-        <div class="wrap">
-            <h1 id="logo"><a href="{{ pathto('index')|replace('index.html', '') }}..">GeoScript</a></h1>
-            <ul id="top-nav">
-                <li class="first"><a href="{{ pathto('index') }}">Scala</a></li>
-                <li><a href="{{ pathto('quickstart') }}">Quick Start</a></li>
-                <li><a href="{{ pathto('api/index') }}">API Reference</a></li>
-            </ul>
-            {%- if pagename != "search" %}
-            <div id="searchbox">
-                <form class="search" action="{{ pathto('search') }}" method="get">
-                    <input id="searchbox-query" type="text" name="q" size="25" value="Search &hellip;" tabindex="3" onblur="if(this.value=='') this.value='Search &hellip;';" onfocus="if(this.value=='Search &hellip;') this.value='';" />
-                    <input id="searchbox-submit" type="image" value="Search" src="{{ pathto('_static/img/search_icon_green.png', 1)}}" />
-                    <input type="hidden" name="check_keywords" value="yes" />
-                    <input type="hidden" name="area" value="default" />
-                </form>
-            </div>
-            {%- endif %}
-        </div>
-    </div>
-{% endblock %}
-
-{% block relbar1 %}
-{% endblock %}
-
-{% block sidebarsearch %}{% endblock %}
-
-{%- block sidebar1 %}
-    {%- if pagename == 'index' %}{{ index_sidebar() }}{% else %}{{ super() }}{% endif %}
-{% endblock %}
-{%- block sidebar2 %}{% endblock %}
-
-{%- block relbar2 %}
-    {%- if pagename != 'index' %}{{ customrelbar(True) }}{% endif %}
-{% endblock %}
+{% extends "geoscript-common/layout.html" %}
+{% set impl_short = 'scala' %}
+{% set impl_long = 'Scala' %}
+{% set impl_repo = 'dwins/geoscript.scala' %}
