fixed blog link

--- a/src/_theme/geoscript/layout.html
+++ b/src/_theme/geoscript/layout.html
@@ -27,7 +27,7 @@
         <div class="sphinxsidebarwrapper">
           <a href="http://geoscriptblog.blogspot.com/feeds/posts/default" class="news">GeoScript News</a>
           <script src="http://landmark-project.com/feed2js/feed2js.php?src=http%3A%2F%2Fgeoscriptblog.blogspot.com%2Ffeeds%2Fposts%2Fdefault%3Falt%3Drss&num=3&desc=75"></script>
-          <a href="{{blog_url}}">Read more...</a>
+          <a href="http://geoscriptblog.blogspot.com">Read more...</a>
         </div>
     </div>
 {%- endmacro %}
