--- a/src/_theme/geoscript-common/layout.html
+++ b/src/_theme/geoscript-common/layout.html
@@ -72,7 +72,11 @@
     {%- endif %}
     {% if pagename == "index" %}
     <script src="{{ pathto('_static/jugl.js', 1) }}"></script>
-    <script>$(site.prepCommits('{{impl_short}}', '{{impl_repo}}'));</script>
+    <script>
+        $(function() {
+            site.prepCommits('{{impl_short}}', '{{impl_repo}}')
+        });
+    </script>
     {% endif %}
 {% endblock %}
 
