Removing space to avoid wrapping here.

--- a/src/_theme/geoscript-common/layout.html
+++ b/src/_theme/geoscript-common/layout.html
@@ -54,8 +54,7 @@
                             on
                             <span jugl:replace="commit.authored_date.substring(0, 10)">
                                 commit date here
-                            </span>
-                            ]
+                            </span>]
                         </span>
                     </li>
                 </ul>
