Grab tags and create download list.

--- a/src/_theme/geoscript-common/layout.html
+++ b/src/_theme/geoscript-common/layout.html
@@ -77,6 +77,13 @@
         });
     </script>
     {% endif %}
+    {% if pagename == "download" %}
+    <script>
+        $(function() {
+            site.prepDownloads('{{theme_impl_short}}', '{{theme_impl_repo}}')
+        });
+    </script>
+    {% endif %}
 {% endblock %}
 
 {% block header %}
