Correctly linking to author.

--- a/src/_theme/geoscript-common/layout.html
+++ b/src/_theme/geoscript-common/layout.html
@@ -47,7 +47,7 @@
                         </a><br />
                         <span class="mini">
                             [by
-                            <a jugl:attributes="href 'http://github.com/' + commit.author.name"
+                            <a jugl:attributes="href 'http://github.com/' + commit.author.login"
                                 jugl:content="commit.author.name">
                                 commit author here
                             </a>
