--- a/src/_theme/geoscript/layout.html
+++ b/src/_theme/geoscript/layout.html
@@ -62,6 +62,7 @@
             <h1 id="logo"><a href="{{ pathto('index') }}">GeoScript</a></h1>
             <ul id="top-nav">
                 <li class="first"><a href="{{ pathto('learning/index') }}">Learning</a></li>
+                <li class="first"><a href="{{ pathto('tutorials/index') }}">Tutorials</a></li>
                 <li class="first"><a href="{{ pathto('examples/index') }}">Examples</a></li>
                 <li><a href="{{ pathto('js/index') }}">JavaScript</a></li>
                 <li><a href="{{ pathto('py/index') }}">Python</a></li>
@@ -98,7 +99,7 @@
 
 {% block sidebarsearch %}{% endblock %}
 {% block sidebarlogo %}
-  {% if pagename.find('learning') != -1 or pagename.find('examples') != -1 %}
+  {% if pagename.find('learning') != -1 or pagename.find('examples') != -1 or pagename.find('tutorials') != -1 %}
     {{ code_chooser() }}
   {% endif %}
 {% endblock %}
