Switch to https when possible

--- a/source/_theme/geoscript-common/layout.html
+++ b/source/_theme/geoscript-common/layout.html
@@ -37,17 +37,17 @@
             <h2>Activity</h2>
             <h4>geoscript.{{ theme_impl_short }} commits</h4>
             <div id="{{theme_impl_short}}commits" class="commits"></div>
-            <a href="http://github.com/{{theme_impl_repo}}/commits/master/">see all ...</a>
+            <a href="https://github.com/{{theme_impl_repo}}/commits/master/">see all ...</a>
             <div id="gitcommits">
                 <ul>
                     <li jugl:repeat="commit commits.slice(0, 3)">
-                        <a jugl:attributes="href 'http://github.com' + commit.url"
+                        <a jugl:attributes="href 'https://github.com' + commit.url"
                             jugl:content="commit.message">
                             commit message here
                         </a><br />
                         <span class="mini">
                             [by
-                            <a jugl:attributes="href 'http://github.com/' + commit.author.login"
+                            <a jugl:attributes="href 'https://github.com/' + commit.author.login"
                                 jugl:content="commit.author.name">
                                 commit author here
                             </a>
@@ -133,7 +133,7 @@
 
 {% block footer %}
 <div class="footer">
-    <a rel="license" href="http://creativecommons.org/licenses/by/3.0/us/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by/3.0/us/80x15.png" /></a>
+    <a rel="license" href="https://creativecommons.org/licenses/by/3.0/us/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/us/80x15.png" /></a>
     {%- if hasdoc('copyright') %}
       {% trans path=pathto('copyright'), copyright=copyright|e %}&copy; <a href="{{ path }}">Copyright</a> {{ copyright }}.{% endtrans %}
     {%- else %}
