--- a/source/_theme/geoscript/layout.html
+++ b/source/_theme/geoscript/layout.html
@@ -27,18 +27,22 @@
         <div class="sphinxsidebarwrapper">
           <a href="https://geoscriptblog.blogspot.com/feeds/posts/default" class="news">GeoScript News</a>
             <script>
-              function showBlog(posts) {
-                $(document).ready(function () {
-                    var ul = $("<ul>");
-                    $(posts.items).each(function(index, item) {
-                        var link = $('<a>').text(item.title).attr('href', item.title);
-                        ul.append($("<li>").append(link));
-                    });
-                    $("#blog-posts").append(ul);
+
+              $('document').ready(function() {
+                $.ajax( {
+                    url: "https://www.googleapis.com/blogger/v3/blogs/8042770441502149016/posts?key=AIzaSyBR-1WaoSZFXqk3jEzgp7o2An0GYgjN1vE",
+                    dataType: 'jsonp',
+                    success: function(posts) {
+                        var ul = $("<ul>");
+                        $(posts.items).each(function(index, item) {
+                            var link = $('<a>').text(item.title).attr('href', item.title);
+                            ul.append($("<li>").append(link));
+                        });
+                        $("#blog-posts").append(ul);
+                    }
                 });
-            }
+              });
           </script>
-          <script src="https://www.googleapis.com/blogger/v3/blogs/8042770441502149016/posts?key=AIzaSyBR-1WaoSZFXqk3jEzgp7o2An0GYgjN1vE&callback=showBlog"></script>
           <div id="blog-posts"></div>
           <a href="https://geoscriptblog.blogspot.com">Read more...</a>
         </div>
