--- a/source/_theme/geoscript/layout.html
+++ b/source/_theme/geoscript/layout.html
@@ -75,7 +75,8 @@
 {% block header %}
     <div class="header">
         <div class="wrap">
-            <h1 id="logo"><a href="{{ pathto('index') }}">GeoScript</a></h1>
+            <img id="logo-img" src="{{ pathto('_static/img/icon.png', 1)}}" width="52" height="52"/>
+            <span id="logo"><a href="{{ pathto('index') }}">GeoScript</a></span>
             <ul id="top-nav">
                 <li class="first"><a href="{{ pathto('learning/index') }}">Learning</a></li>
                 <li class="first"><a href="{{ pathto('tutorials/index') }}">Tutorials</a></li>
